--- a/app/static/information_company.css
+++ b/app/static/information_company.css
@@ -172,6 +172,19 @@ img {
     padding: 1rem;
 }
 
+.progress {
+    background-color: #e9ecef;
+    border-radius: 0.25rem;
+    overflow: hidden;
+}
+
+.progress-bar {
+    transition: width 0.6s ease;
+    text-align: center;
+    white-space: nowrap;
+    color: var(--primary-foreground);
+    background-color: var(--primary); /* Or use your desired color */
+}
 
 @media (max-width: 992px) {
     .card-img-container {
@@ -241,6 +254,11 @@ img {
         display: inline;
         text-align: justify;
     }
+}
+
+.progress-bar-dynamic {
+    /* Usa la variabile CSS impostata inline per determinare la larghezza */
+    width: var(--progress);
 }
 
 /* Su mobile, disattiviamo il float */
