--- a/app/templates/includes/user_menu.html
+++ b/app/templates/includes/user_menu.html
@@ -41,7 +41,7 @@
         <li><a class="dropdown-item text-dark" href="/manage_employee">
             <i class="bi bi-person-x me-2"></i>Manage Employee
         </a></li>
-        <li><a class="dropdown-item text-dark" href="/company_admin/token">
+        <li><a class="dropdown-item text-dark" href="/manage_tokens">
             <i class="bi bi-coin me-2"></i>Manage Token
         </a></li>
         {% endif %}
